packages/compiler/tests/fixtures/invalid/browser-workers.svelte
<script>
  const w = new Worker("worker.js")
</script>
<text>Workers</text>
